name:                web-push
version:             0.4
synopsis:            Send messages using Web Push protocol.
description:
    Web Push is a simple protocol for delivery of real-time events
    to user agents using HTTP/2 server push. This can be used to send
    notifications to browsers using the Push API.
homepage:            https://github.com/sarthakbagaria/web-push#readme
license:             MIT
license-file:        LICENSE
author:              Sarthak Bagaria
maintainer:          neokits@gmail.com
copyright:           2017 Sarthak Bagaria
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Web.WebPush
                       Web.WebPush.Internal
  ghc-options:        -Wall -fwarn-tabs -O2
  build-depends:       base                          
                     , aeson
                     , time
                     , bytestring                    
                     , base64-bytestring             
                     , text                          
                     , cryptonite                    
                     , binary                        
                     , memory                        
                     , random                        
                     , http-client                   
                     , http-types                    
                     , transformers                  
                     , lens                          
                     , safe-exceptions               

  default-language:    Haskell2010

test-suite web-push-test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  other-modules:       WebPushEncryptionSpec
  hs-source-dirs:      test
  ghc-options:         -Wall
  build-depends:       base
                     , web-push
                     , hspec                         
                     , bytestring                    
                     , base64-bytestring             
                     , binary                        

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sarthakbagaria/web-push
